--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "parcel": "^2.8.2"
+  },
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.8.2"
   }
 }
