--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "engines": {
     "node": ">=12"
   },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "parcel -p 3000 ./index.hbs ./server.js",
