--- a/.parcelrc
+++ b/.parcelrc
@@ -2,5 +2,8 @@
   "extends": "@parcel/config-default",
   "transformers": {
     "*.hbs": ["@anikin/parcel-transformer-handlebars"]
-  }
+  },
+  "optimizers": {
+      "*.{jpg,jpeg,png}": []
+   }
 }
