--- a/package.json
+++ b/package.json
@@ -16,7 +16,20 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "assert": "^2.0.0",
-    "parcel": "^2.8.2"
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^5.7.1",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "parcel": "^2.8.2",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "@parcel/transformer-sass": "^2.8.2",
