--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "https://github.com/vvozvv/middle.messenger.praktikum.yandex"
   },
+  "include": ["src/custom.d.ts"],
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "parcel -p 3000 ./index.hbs ./server.js",
