--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,8 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.hbs": ["@anikin/parcel-transformer-handlebars"]
+    "*.hbs": ["@anikin/parcel-transformer-handlebars"],
+    "*.{ts,tsx}": ["@parcel/transformer-typescript-tsc"]
   },
   "optimizers": {
       "*.{jpg,jpeg,png}": []
