--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "type": "git",
     "url": "https://github.com/vvozvv/middle.messenger.praktikum.yandex"
   },
-  "include": ["src/custom.d.ts"],
+  "include": [
+    "src/custom.d.ts"
+  ],
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "parcel -p 3000 ./index.hbs ./server.js",
-    "build": "parcel build ./index.hbs"
+    "build": "parcel build ./index.hbs",
+    "format": "eslint --fix --ext .js,.ts"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@parcel/transformer-typescript-tsc": "^2.8.3",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
     "crypto-browserify": "3.12.0",
     "events": "3.3.0",
-    "parcel": "2.8.2",
+    "parcel": "2.8.3",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
@@ -33,9 +37,10 @@
     "util": "0.12.5"
   },
   "dependencies": {
-    "@parcel/transformer-sass": "2.8.2",
+    "@parcel/transformer-sass": "2.8.3",
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   }
 }
