--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "stylelint": "14.16.1",
     "url": "0.11.0",
     "util": "0.12.5"
   },
