--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "string_decoder": "1.3.0",
     "stylelint": "14.16.1",
     "url": "0.11.0",
-    "util": "0.12.5"
+    "util": "0.12.5",
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "@parcel/transformer-sass": "2.8.3",
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "typescript": "4.9.4",
     "uuid": "^9.0.0"
   }
 }
