--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "sourceMap": true,
     "baseUrl": "./src",
     "isolatedModules": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "paths": {
       "components/*": ["./components/*"]
     }
