--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
     "crypto-browserify": "3.12.0",
+    "eslint": "^8.33.0",
     "events": "3.3.0",
     "parcel": "2.8.3",
     "path-browserify": "1.0.1",
@@ -34,9 +35,9 @@
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
     "stylelint": "14.16.1",
+    "typescript": "4.9.4",
     "url": "0.11.0",
-    "util": "0.12.5",
-    "typescript": "4.9.4"
+    "util": "0.12.5"
   },
   "dependencies": {
     "@parcel/transformer-sass": "2.8.3",
