--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
     "stylelint": "14.16.1",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "typescript": "4.9.4",
     "url": "0.11.0",
     "util": "0.12.5"
