--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "buffer": "5.7.1",
     "crypto-browserify": "3.12.0",
     "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
     "events": "3.3.0",
     "parcel": "2.8.3",
     "path-browserify": "1.0.1",
