--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,13 +16,16 @@
     "target": "es2021",
     "strict": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "paths": {
-      "components/*": ["src/components/*"],
-      "page/*": ["src/pages/*"],
-      "assets/*": ["src/assets/*"]
+      "@components/*": [
+        "./components/*"
+      ],
+      "*": [
+        "*"
+      ]
     }
   }
 }
