--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
     "@parcel/transformer-typescript-tsc": "^2.8.3",
+    "@types/uuid": "^9.0.1",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
