--- a/package.json
+++ b/package.json
@@ -12,43 +12,50 @@
     "src/custom.d.ts"
   ],
   "scripts": {
-    "start": "npm run build && node server.js",
-    "dev": "parcel -p 3000 ./index.hbs ./server.js --open",
-    "build": "parcel build ./index.hbs",
+    "start": "webpack && node server.js",
+    "dev": "webpack serve --mode=development --progress",
+    "build": "webpack ./index.hbs",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
     "stylelint:fix": "npm run stylelint --fix"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@parcel/transformer-typescript-tsc": "^2.8.3",
+    "@types/node": "^18.14.6",
     "@types/uuid": "^9.0.1",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
     "crypto-browserify": "3.12.0",
-    "eslint": "^8.33.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "css-loader": "^6.7.3",
+    "eslint": "8.33.0",
+    "eslint-config-airbnb": "19.0.4",
     "events": "3.3.0",
-    "parcel": "2.8.3",
+    "husky": "8.0.3",
+    "node-sass": "^8.0.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
     "querystring-es3": "0.2.1",
+    "sass-loader": "^13.2.0",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "style-loader": "^3.3.1",
     "stylelint": "14.16.1",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "typescript": "4.9.4",
+    "stylelint-config-standard": "29.0.0",
+    "stylelint-config-standard-scss": "6.1.0",
+    "svg-sprite-loader": "^6.0.11",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "url": "0.11.0",
-    "util": "0.12.5"
+    "util": "0.12.5",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@parcel/transformer-sass": "2.8.3",
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "uuid": "^9.0.0"
+    "uuid": "9.0.0"
   }
 }
