--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-config-airbnb": "19.0.4",
     "events": "3.3.0",
     "husky": "8.0.3",
-    "node-sass": "^8.0.0",
+    "node-sass": "8.0.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
@@ -54,8 +54,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "chai": "^4.3.7",
     "express": "4.18.2",
     "handlebars": "4.7.7",
+    "mocha": "^10.2.0",
     "uuid": "9.0.0"
   }
 }
