--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   ],
   "scripts": {
     "start": "webpack && node server.js",
-    "dev": "webpack serve --mode=development --progress",
-    "build": "webpack ./index.hbs",
+    "serve": "webpack serve --open",
+    "dev": "npm run build && npm run serve",
+    "build": "webpack",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
-    "stylelint:fix": "npm run stylelint --fix"
+    "stylelint:fix": "npm run stylelint --fix",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -25,48 +27,62 @@
     }
   },
   "lint-staged": {
-    "*.(js|jsx)": ["npm run format", "npm run stylelint", "git add"]
+    "*.(js|jsx)": [
+      "npm run format",
+      "npm run stylelint",
+      "git add"
+    ]
   },
   "devDependencies": {
-    "@types/node": "^18.14.6",
-    "@types/uuid": "^9.0.1",
+    "@types/jest": "^29.4.0",
+    "@types/jsdom-global": "^3.0.4",
+    "@types/node": "18.14.6",
+    "@types/uuid": "9.0.1",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "3.12.0",
     "css-loader": "^6.7.3",
     "eslint": "8.33.0",
     "eslint-config-airbnb": "19.0.4",
     "events": "3.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "8.0.3",
-    "lint-staged": "^13.1.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "21.1.0",
+    "jsdom-global": "3.0.2",
+    "lint-staged": "13.1.2",
     "node-sass": "8.0.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
     "querystring-es3": "0.2.1",
-    "sass-loader": "^13.2.0",
+    "sass-loader": "13.2.0",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
-    "style-loader": "^3.3.1",
+    "style-loader": "3.3.1",
     "stylelint": "14.16.1",
     "stylelint-config-standard": "29.0.0",
     "stylelint-config-standard-scss": "6.1.0",
-    "svg-sprite-loader": "^6.0.11",
+    "svg-sprite-loader": "6.0.11",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4",
     "url": "0.11.0",
     "util": "0.12.5",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "chai": "^4.3.7",
+    "@typescript-eslint/parser": "^5.54.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "mocha": "^10.2.0",
     "uuid": "9.0.0"
   }
 }
