--- a/package.json
+++ b/package.json
@@ -34,24 +34,24 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/jsdom-global": "^3.0.4",
+    "@types/jest": "29.4.0",
+    "@types/jsdom-global": "3.0.4",
     "@types/node": "18.14.6",
     "@types/uuid": "9.0.1",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "5.7.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "11.0.0",
     "crypto-browserify": "3.12.0",
-    "css-loader": "^6.7.3",
+    "css-loader": "6.7.3",
     "eslint": "8.33.0",
     "eslint-config-airbnb": "19.0.4",
     "events": "3.3.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "5.5.0",
     "husky": "8.0.3",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "jsdom": "21.1.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "13.1.2",
@@ -69,8 +69,8 @@
     "stylelint-config-standard": "29.0.0",
     "stylelint-config-standard-scss": "6.1.0",
     "svg-sprite-loader": "6.0.11",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
+    "ts-jest": "29.0.5",
+    "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "url": "0.11.0",
@@ -80,7 +80,7 @@
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "uuid": "9.0.0"
