--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jsdom": "21.1.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "13.1.2",
+    "mini-css-extract-plugin": "^2.7.3",
     "node-sass": "8.0.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
