--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "jsdom-global": "3.0.2",
     "lint-staged": "13.1.2",
     "mini-css-extract-plugin": "^2.7.3",
-    "node-sass": "8.0.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
     "querystring-es3": "0.2.1",
+    "sass": "1.52.3",
     "sass-loader": "13.2.0",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
