--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   ],
   "scripts": {
     "start": "webpack && node server.js",
-    "serve": "webpack serve --open",
-    "dev": "npm run build && npm run serve",
-    "build": "webpack",
+    "serve": "webpack serve --config config/webpack.dev.js",
+    "dev": "webpack && npm run serve --config webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
     "stylelint:fix": "npm run stylelint --fix",
-    "test": "jest"
+    "test": "jest",
+    "preinstall": "npx npm-force-resolutions"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm-run-all test lint",
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
@@ -46,17 +48,19 @@
     "copy-webpack-plugin": "11.0.0",
     "crypto-browserify": "3.12.0",
     "css-loader": "6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "8.33.0",
     "eslint-config-airbnb": "19.0.4",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.3",
-    "jest": "^29.5.0",
+    "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jsdom": "21.1.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "13.1.2",
-    "mini-css-extract-plugin": "^2.7.3",
+    "mini-css-extract-plugin": "2.7.3",
+    "npm-force-resolutions": "^0.0.10",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
@@ -77,14 +81,18 @@
     "typescript": "4.9.4",
     "url": "0.11.0",
     "util": "0.12.5",
-    "webpack": "5.75.0",
+    "webpack": "^5.76.1",
     "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@typescript-eslint/parser": "5.54.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "uuid": "9.0.0"
+  },
+  "resolutions": {
+    "postcss": "7.0.36"
   }
 }
