--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "src/custom.d.ts"
   ],
   "scripts": {
-    "start": "webpack && node server.js",
-    "serve": "webpack serve --config config/webpack.dev.js",
-    "dev": "webpack && npm run serve --config webpack.dev.js",
+    "start": "webpack --config config/webpack.prod.js && node server.js ",
+    "dev": "webpack --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
