--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "start": "webpack --config config/webpack.prod.js && node server.js ",
-    "dev": "webpack --config config/webpack.dev.js",
+    "dev": "webpack serve --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
