--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "src/custom.d.ts"
   ],
   "scripts": {
-    "start": "webpack --config config/webpack.prod.js && node server.js ",
-    "dev": "webpack serve --config config/webpack.dev.js && npm run build",
-    "build": "webpack",
+    "start": "webpack --config config/webpack.prod.js && node server.js",
+    "dev": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
