--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "src/custom.d.ts"
   ],
   "scripts": {
-    "start": "webpack serve --config config/webpack.prod.js && node server.js",
+    "start": "npm run build && node server.js",
     "dev": "webpack serve --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
