--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js",
+    "build": "webpack",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
     "stylelint:fix": "npm run stylelint --fix",
-    "test": "jest",
-    "preinstall": "npx npm-force-resolutions"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -59,7 +58,6 @@
     "jsdom-global": "3.0.2",
     "lint-staged": "13.1.2",
     "mini-css-extract-plugin": "2.7.3",
-    "npm-force-resolutions": "^0.0.10",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "punycode": "1.4.1",
@@ -90,8 +88,5 @@
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "uuid": "9.0.0"
-  },
-  "resolutions": {
-    "postcss": "7.0.36"
   }
 }
