--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack",
+    "build": "webpack --config config/webpack.prod.js",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
