--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   ],
   "scripts": {
     "start": "npm run build && node server.js",
-    "dev": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js",
+    "dev": "webpack serve --mode=development",
+    "build": "webpack --mode=production",
     "build:container": "docker build -t messenger .",
     "format": "eslint --fix --ext .js,.ts",
     "stylelint": "stylelint \"src/**/*.scss\"",
