--- a/package.json
+++ b/package.json
@@ -71,17 +71,17 @@
     "stylelint": "14.16.1",
     "stylelint-config-standard": "29.0.0",
     "stylelint-config-standard-scss": "6.1.0",
-    "svg-sprite-loader": "6.0.11",
+    "svg-inline-loader": "^0.8.2",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "url": "0.11.0",
     "util": "0.12.5",
-    "webpack": "^5.76.1",
+    "webpack": "5.76.1",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "@typescript-eslint/parser": "5.54.1",
